--- a/src/app/comp/result/user/user.component.html
+++ b/src/app/comp/result/user/user.component.html
@@ -3,7 +3,7 @@
 <table class="table table-sm table-hover">
     <tbody>
         @for (item of user; track $index) {
-        <tr>
+        <tr [ngClass]="showUnmatchedItems || userMatched.includes(item.uuid) ? '' : 'd-none'">
             <td [ngClass]="{ 'cursor-pointer': true, 'text-success': userMatched.includes(item.uuid)}">
                 <strong [innerHTML]="item.name | highlight: searchResult.search.phrase"
                     (mouseover)="hoverNode(item, $event)" (mouseout)="leaveNode(item)"
