Configure disabled search functions #28

--- a/src/app/comp/home/home.component.html
+++ b/src/app/comp/home/home.component.html
@@ -25,6 +25,7 @@
                                 {{ l10nphrase.navbar.searchOptions }}
                             </button>
                             <ul class="dropdown-menu">
+                                @if (!disabledFunctions.includes('config')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" formControlName="searchConfig"
@@ -34,6 +35,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('jobtypes')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" formControlName="searchJobtypes"
@@ -43,6 +46,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('parameterset')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" formControlName="searchPSet"
@@ -52,6 +57,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('workflows')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox"
@@ -62,9 +69,11 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
+                                @if (!disabledFunctions.includes('certstore')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox"
@@ -75,6 +84,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('serverConfig')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox"
@@ -85,6 +96,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('serverInfo')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox"
@@ -95,6 +108,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('ippDevices')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox"
@@ -105,6 +120,8 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
+                                @if (!disabledFunctions.includes('users')) {
                                 <li class="dropdown-item">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" formControlName="searchUsers"
@@ -114,6 +131,7 @@
                                         </label>
                                     </div>
                                 </li>
+                                }
                             </ul>
                         </div>
                         <button class="btn btn-success text-nowrap" [disabled]="searchBusy" type="submit">{{ searchBusy
