--- a/src/app/comp/workflow-ui/workflow-ui.component.html
+++ b/src/app/comp/workflow-ui/workflow-ui.component.html
@@ -1,5 +1,4 @@
-@if (loaded && workflow && model && startpoints && workflowUuid && (sysHUB2022CompatibilityMode || (references &&
-versions))) {
+@if (loaded && workflow && model && startpoints && workflowUuid) {
 <article class="container-fluid">
     <section>
         <div class="d-flex align-items-center justify-content-between">
