Improve error display if config not loaded #31

--- a/src/app/comp/main/config-missing-bar/config-missing-bar.component.html
+++ b/src/app/comp/main/config-missing-bar/config-missing-bar.component.html
@@ -4,7 +4,7 @@
         <span class="text-center">
             {{ l10nphrase.home.disabledFindr.description }}
             <br />
-            {{ l10nphrase.home.disabledFindr.missingScope }}
+            {{ l10nphrase.home.disabledFindr.missingConfigFile }}
             <br />
             <a class="text-reset" target="_blank"
                 href="https://github.com/surcoufx83/sysHUB-Findr?tab=readme-ov-file#konfiguration">
