Better param description #29

--- a/src/app/comp/home/home.component.html
+++ b/src/app/comp/home/home.component.html
@@ -169,6 +169,7 @@
                                     id="home-search-excludeBComments" name="home-search-excludeBComments">
                                 <label class="form-check-label" for="home-search-excludeBComments">
                                     {{ l10nphrase.search.filter.excludeBComments }}
+                                    <i class="fs-7">({{ l10nphrase.search.filter.excludeBCommentsWorkflowHint }})</i>
                                 </label>
                             </div>
                         </li>
